tests/fixtures/invalid/list_rshift_int.py
# Cannot right shift List[int] and Int
x: list[int] = [1, 2, 3] >> 1
